# anbox_fydeos

./: Android.mk  BUILD.gn
android/service/: android_api_skeleton.cpp  android_api_skeleton.h  chrome_connector.cpp  chrome_connector.h  chrome_message_processor.cpp  chrome_message_processor.h  daemon.cpp  host_connector.cpp  host_connector.h  message_processor.cpp  message_processor.h
scripts/: add-houdini.sh  anbox-init.sh  create-package.sh
src/anbox/bridge/: platform_api_skeleton.cpp  platform_api_skeleton.h  platform_message_processor.cpp  platform_message_processor.h
src/anbox/platform/: base_platform.h
src/anbox/protobuf/: anbox_bridge.proto  anbox_chrome.proto
src/anbox/wm/: multi_window_manager.cpp
src/fydeos/: CMakeLists.txt  anbox_rpc_chrome.h  session.cc  wayland_platform.cc  wayland_platform.h  wayland_pointer.cc  wayland_pointer.h  wayland_window.cc  wayland_window.h
